{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 35,
  "lineage": "aa48c26d-d6d9-ed8b-796f-12bb8760445d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "init_p",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-085925f297f89fce1",
            "arn": "arn:aws:ec2:us-east-1:876724398547:instance/i-0ae273a26ada6738a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ae273a26ada6738a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra_key1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-084be51559a15050c",
            "private_dns": "ip-10-0-0-54.ec2.internal",
            "private_ip": "10.0.0.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09203698faf4d7eef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b102f33e61d721e2",
            "tags": {
              "Name": "private_init"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-067ee5dfd386a1e2d"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_private",
            "aws_subnet.private-subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-085925f297f89fce1",
            "arn": "arn:aws:ec2:us-east-1:876724398547:instance/i-07ba5ae9eaf5d9569",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07ba5ae9eaf5d9569",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra_key1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-019ffa46bfa4b4140",
            "private_dns": "ip-10-0-0-11.ec2.internal",
            "private_ip": "10.0.0.11",
            "public_dns": "ec2-54-88-165-90.compute-1.amazonaws.com",
            "public_ip": "54.88.165.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b8d6fd7bee40e4df",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e327d276d5193c66",
            "tags": {
              "Name": "Terraform_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0670d463e0a3210da"
            ]
          },
          "dependencies": [
            "aws_security_group.public-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-04abc0e1faace1377",
            "owner_id": "876724398547",
            "tags": {
              "Name": "VPC IGW"
            },
            "vpc_id": "vpc-084a09bebf47de279"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06f3c8fef91683a53",
            "owner_id": "876724398547",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04abc0e1faace1377",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet RT"
            },
            "vpc_id": "vpc-084a09bebf47de279"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6fc5af2588414aa",
            "route_table_id": "rtb-06f3c8fef91683a53",
            "subnet_id": "subnet-0e327d276d5193c66"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:876724398547:security-group/sg-0670d463e0a3210da",
            "description": "Allow incoming HTTP connections \u0026 SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0670d463e0a3210da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public SG",
            "name_prefix": null,
            "owner_id": "876724398547",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-084a09bebf47de279"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:876724398547:security-group/sg-067ee5dfd386a1e2d",
            "description": "Allow traffic from public subnet",
            "egress": [],
            "id": "sg-067ee5dfd386a1e2d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/27"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Private SG",
            "name_prefix": null,
            "owner_id": "876724398547",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-084a09bebf47de279"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:876724398547:subnet/subnet-0b102f33e61d721e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.32/27",
            "id": "subnet-0b102f33e61d721e2",
            "map_public_ip_on_launch": false,
            "owner_id": "876724398547",
            "tags": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-084a09bebf47de279"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:876724398547:subnet/subnet-0e327d276d5193c66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/27",
            "id": "subnet-0e327d276d5193c66",
            "map_public_ip_on_launch": false,
            "owner_id": "876724398547",
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-084a09bebf47de279"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:876724398547:vpc/vpc-084a09bebf47de279",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/26",
            "default_network_acl_id": "acl-0c7a70185c1264b4a",
            "default_route_table_id": "rtb-086735461233aa587",
            "default_security_group_id": "sg-0c3ab2efd6acb5ee2",
            "dhcp_options_id": "dopt-766aa20c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-084a09bebf47de279",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-086735461233aa587",
            "owner_id": "876724398547",
            "tags": {
              "Name": "terra-vpc"
            }
          }
        }
      ]
    }
  ]
}